syntax = "proto3";

option go_package = "./";  // 设置 Go 包路径

package geecachespb;

message GetRequest {
  string group = 1;
  string key = 2;
}

message GetResponse {
  bytes value = 1;
}

message AddRequest {
  string group = 1;
  string key = 2;
  bytes value = 3;
}

message Empty {}

service GroupCache {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Add(AddRequest) returns (Empty);
}